Fix card size stretching in css

--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -283,23 +283,6 @@ body {
     border-color: #1CA347;
 }
 
-.payment-picker {
-    text-align: center;
-    padding-right: 75px;
-}
-
-.payment-logo {
-    width: 75px;
-    height: 50px;
-}
-
-#card-info {
-    display: none;
-}
-
-#expiration-date, #card-exp-month, #card-exp-year {
-}
-
 /* Custom Styles
 ******************/
 
@@ -522,4 +505,20 @@ div#map-container {
 
 .payment-picker > label {
     margin-left: 70px;
+}
+
+
+.payment-picker {
+    text-align: center;
+    padding-right: 75px;
+}
+
+.payment-logo {
+    height: 50px;
+    width: auto;
+    cursor: pointer;
+}
+
+#card-info {
+    display: none;
 }
